[package]
name = "jlf"
version = "0.2.0"
edition = "2021"
authors = ["Jack Lee <jack.y.l.dev@gmail.com>"]
description = "CLI for converting JSON logs to human-readable format"
categories = ["command-line-interface"]
keywords = ["json", "log", "jl", "format", "cli"]
documentation = "https://docs.rs/jlf"
repository = "https://github.com/poonesnerfect/jlf"
license = "MIT OR Apache-2.0"

[lib]
path = "src/lib.rs"
name = "jlf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6.2"
owo-colors = { version = "4.0.0", features = ["alloc", "supports-colors"] }
smallvec = "1.13.2"
strip-ansi-escapes = "=0.2.0"
thiserror = "1.0.61"
tosserror = "0.1.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[[bench]]
name = "parse_json"
harness = false
